--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ table#tlayout {
 
 body {
 	background: white;
-	font-family: Georgia, sans-serif;
-/* font-family:verdana, Arial, Helvetica, sans-serif; */
+	font-family: Georgia, serif;
 	padding-bottom: 8px;
 	margin: 0;
 }
@@ -144,17 +143,6 @@ p {
 	padding: 0;
 	line-height: 1.3;
 }
-
-pp {
-	margin-top: 0.0em;
-	margin-bottom: 0.8em;
-	padding: 0;
-	line-height: 1.3;
-	text-decoration: underline;
-  -webkit-text-decoration-color: red; /* Safari */  
-  text-decoration-color: red;
-}
-
 
 pre {
 	padding: 0;
@@ -364,6 +352,11 @@ tr.heading {
 
 img {
     border: none;
+}
+
+table.imgtable, table.imgtable td {
+    border: none;
+    text-align: left;
 }
 
 table.imgtable, table.imgtable td {
